--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.askel.catchup.MessageScreen">
+    tools:context="com.askel.catchup.MessageActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -12,8 +12,6 @@
         android:layout_above="@+id/LinearLayout"
         android:id="@+id/msgRec">
     </android.support.v7.widget.RecyclerView>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
